# WMS_EFP

./: .dockerignore  .env.docker.example  .env.production.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  BUGFIX_REPORT.md  CELERY_REDIS_SETUP.md  DASHBOARD_BUTTONS_FIX.md  DEMO_READY.md  DEPLOY_SWEB.md  DEVELOPMENT_COMPLETE.md  DOCKER_SETUP.md  Dockerfile  FRONTEND_UPDATE.md  ORDER_WORKFLOW_BY_ROLES.md  PROJECT_FUNCTIONALITY_REPORT.md  PROJECT_REPORT.md  PROJECT_STATUS.md  ROLES_IMPLEMENTATION.md  WAREHOUSE_3D_DOCUMENTATION.md  _emoji_scan.txt  conftest.py  docker-compose.prod.yml  docker-entrypoint.sh  locustfile123123213.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  start.cmd
2Диплом/: .$Алгоритм_обработки_данных_WMS.drawio.bkp  .$Диаграмма_прецедентов_WMS.drawio.bkp  .$Логическая_схема_БД_WMS.drawio.bkp  .$Структурная_схема_WMS.drawio.bkp  .$Схема_архитектуры_WMS.drawio.bkp  .$Схема_пользовательского_интерфейса_WMS.drawio.bkp  .$Схема_тестирования_WMS.drawio.bkp  .$Физическая_схема_БД_WMS.drawio.bkp  2.1.3_Подробные_требования_к_проекту.txt  2.2.5_Контроль_целостности_данных_WMS.docx  class_diagram_wms_aligned.dot  class_diagram_wms_django_extensions_ortho.dot  class_diagram_wms_django_extensions_ortho_warnings.txt  class_diagram_wms_django_extensions_straight.dot  graphviz_ortho_warnings.txt  Алгоритм_обработки_данных_WMS.drawio  Входные_и_выходные_данные_WMS.docx  Входные_и_выходные_данные_WMS_ГОСТ_A4.docx  Входные_и_выходные_данные_WMS_поля_как_на_скрине.docx  Входные_и_выходные_данные_WMS_портретная.docx  Диаграмма_классов_WMS.drawio  Диаграмма_классов_WMS_django_extensions_ortho.dot  Диаграмма_классов_WMS_подробная.drawio  Диаграмма_прецедентов_WMS.drawio  Инструментальные_средства_разработки_WMS.docx  Инструментальные_средства_разработки_WMS_3_столбца.docx  Инфологическая_схема_БД_WMS_dbdiagram.dbml  Логическая_схема_БД_WMS.drawio  Логическая_схема_БД_WMS_dbdiagram_старая_с_ключами.dbml  Методы_разработки_и_архитектурные_паттерны_развернуто.txt  ПРИЛОЖЕНИЕ_Б_ТЕСТОВЫЕ_ИСПЫТАНИЯ_WMS.docx  ПРИЛОЖЕНИЕ_Б_ТЕСТОВЫЕ_ИСПЫТАНИЯ_WMS_ПО_СХЕМЕ.docx  ПРИЛОЖЕНИЕ_Г_СКРИПТ_БД_WMS.docx  Словарь_данных_WMS.docx  Сообщения_оператору_WMS.docx  Средства_разработки_и_архитектура_WMS.txt  Структурная_схема_WMS.drawio  Схема_архитектуры_WMS.drawio  Схема_пользовательского_интерфейса_WMS.drawio  Схема_тестирования_WMS.drawio  (+16 more)
_export_smoke/: movements.csv  movements.xlsx  movements_final.csv  movements_final.xlsx
accounts/: admin.py  constants.py  models.py  permissions.py  role_permissions.py  test_role_permissions.py  urls.py  views.py
admin_panel/: apps.py  decorators.py  forms.py  models.py  services.py  urls.py  views.py
api/: auth.py  models.py  tests.py  urls.py  utils.py  views.py
backups/: backup_20260428_001655.sql  backup_20260504_092829.sql  backup_20260514_060333.sql  schema_only_wms.sql  wms_demo_dump.sql
catalog/: admin.py  audit.py  barcode_service.py  barcode_views.py  forms.py  models.py  normalization.py  product_validation.py  services.py  test_barcode.py  test_import_parts.py  test_import_vehicles.py  test_services_extra.py  test_views_actions.py  test_views_extended.py  tests.py  urls.py  views.py  views_api.py
config/: env.example
core/: admin.py  admin_mixins.py  context_processors.py  export.py  middleware.py  pagination.py  sorting.py  test_error_pages.py  test_export.py  urls.py  (+5 more)
(+279 files in other folders)
